--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -28,7 +28,7 @@
 
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
-        <h2 >{{ title }}</h2> <i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+        <h2 ><u>{{ title }}</u></h2> <i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
         <h2 >{{ title }}</h2>
       {% endif %}
